--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ addons:
     packages:
       - lib32stdc++6
 
+matrix:
+  allow_failures:
+    - env: SOURCEMOD=1.10
+
 env:
   - SOURCEMOD=1.8
   - SOURCEMOD=1.9
