--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [ "master" ]
+    branches: '**'
   pull_request:
-    branches: [ "master" ]
+    branches: '**'
 
 jobs:
   build:
@@ -77,11 +77,13 @@ jobs:
           path: plugins/
 
     - name: Prepare release bundles
+      if: github.ref == 'refs/heads/master'
       run: |
         zip -r jse-bundle.zip LICENSE gamedata plugins scripting translations
         tar -czf jse-bundle.tar.gz LICENSE gamedata plugins scripting translations
 
     - name: "Release development build"
+      if: github.ref == 'refs/heads/master'
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
